fix overflow login

--- a/views/login.css
+++ b/views/login.css
@@ -14,6 +14,13 @@
    --font-small-size: 8px;
 }
 
+html,body{
+    margin: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
 
 h1{
     color: #FFFFFF;
